# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md
src/: advent-common.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  days.h  main.cpp
